
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int _IONBF ;
 int proof () ;
 int puts (char*) ;
 int setvbuf (int ,int *,int ,int ) ;
 int stdout ;

int
main (int argc, char *argv[])
{
 setvbuf (stdout, ((void*)0), _IONBF, 0);
 puts ("Linux kernel IPv6 UDP port infinite loop vulnerability\n"
       "proof of concept code\n"
       "Copyright (C) 2005 Remi Denis-Courmont "
       "<\x65\x78\x70\x6c\x6f\x69\x74\x40\x73\x69\x6d\x70"
       "\x68\x61\x6c\x65\x6d\x70\x69\x6e\x2e\x63\x6f\x6d>\n");

 return -proof ();
}
