; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_26382.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_26382.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdout = common dso_local global i32 0, align 4
@_IONBF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [144 x i8] c"Linux kernel IPv6 UDP port infinite loop vulnerability\0Aproof of concept code\0ACopyright (C) 2005 Remi Denis-Courmont <exploit@simphalempin.com>\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* @stdout, align 4
  %7 = load i32, i32* @_IONBF, align 4
  %8 = call i32 @setvbuf(i32 %6, i32* null, i32 %7, i32 0)
  %9 = call i32 @puts(i8* getelementptr inbounds ([144 x i8], [144 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 (...) @proof()
  %11 = sub nsw i32 0, %10
  ret i32 %11
}

declare dso_local i32 @setvbuf(i32, i32*, i32, i32) #1

declare dso_local i32 @puts(i8*) #1

declare dso_local i32 @proof(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
